<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_signup_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:text="@string/what_s_your_email"
            android:textSize="@dimen/app_text_size_xxlarge"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_email_invalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_valid_email"
            android:visibility="gone"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_top">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/next"/>
    </RelativeLayout>
</RelativeLayout>